--- a/src/page/main-page/main-page.css
+++ b/src/page/main-page/main-page.css
@@ -1,5 +1,5 @@
 .page {
-  min-height: 100%;
+  height: 100%;
   min-width: 100%;
   background-color: #020222;
   color: #ffffff;
@@ -17,4 +17,47 @@
 
 .custom__button:hover {
   background-color: #0dd1a2;
+}
+
+.screen-title {
+  display: inline-block;
+  position: relative;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 51px;
+}
+
+.screen-title::after {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  width: 110%;
+  height: 3px;
+  background-color: #0dd1a2;
+}
+
+@media screen and (max-width: 1250px) {
+  .screen-title {
+    font-size: 38px;
+    line-height: 44px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .screen-title {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .screen-title {
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .screen-title::after {
+    width: 90%;
+  }
 }
