Сделал компонент TechnologyScreen

--- a/src/components/description-screen/description-screen.css
+++ b/src/components/description-screen/description-screen.css
@@ -155,7 +155,7 @@
   .description__slider {
     align-self: unset;
     min-width: unset;
-    width: 288px;
+    width: 90%;
     margin: 0 auto;
   }
 
